# monglepick-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Modelfile.mongle  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: cd-prod.yml  ci-cd-agent.yml  ci-cd.yml
docs/: 프로젝트_전체_분석서.md
scripts/: backup_for_production.sh  check_env.py  check_mood_fallback.py  check_quality_ml1_ml2.py  evaluate_mongle.py  export_embeddings_for_projector.py  finetune_mongle.py  generate_training_data.py  index_admin_tools.py  index_support_policy.py  make_new_pptx.py  make_pptx.py  merge_and_convert.py  monitor_upstage_quota.py  run_es_sync.py  run_final_verification.py  run_full_reload.py  run_kaggle_ratings_load.py  run_kaggle_supplement.py  run_kmdb_load.py  run_kobis_boxoffice_history.py  run_kobis_load.py  run_mood_enrichment.py  run_movie_llm_enrichment.py  run_mysql_sync.py  run_neo4j_resync.py  run_omdb_ratings_load.py  run_persons_full_pipeline.py  run_persons_mysql_sync.py  run_persons_neo4j_enrich.py  run_phase1_verify.py  run_phase3_mysql_migration.sh  run_pipeline.py  run_skipped_movies_recover.py  run_tmdb_persons_collect.py  swap_upstage_keys.sh  switch_to_hybrid.sh  test_parasite_e2e.py  verify_mysql_schema.py
src/monglepick/: __init__.py  config.py  main.py  metrics.py
tests/: conftest.py
tests/integration/: test_chat_api.py  test_chat_graph.py  test_image_chat_graph.py  test_multi_turn.py
tests/unit/: conftest.py  test_admin_assistant_phase4.py  test_admin_draft_validators.py  test_admin_tool_rag.py  test_chain_integration.py  test_chat_models.py  test_chat_nodes.py  test_clarification_hints.py  test_concurrency.py  test_content_analysis.py  test_explanation_chain.py  test_external_search_node.py  test_hybrid_search_rrf.py  test_image_analysis_chain.py  test_image_analyzer_node.py  test_image_security.py  test_index_support_policy.py  test_intent_emotion_chain.py  test_llm_factory.py  test_llm_factory.py.bak  test_now_showing_cache.py  test_quiz_generation_agent.py  test_recommendation_nodes.py  test_retrieval_quality.py  test_review_verification_nodes.py  test_roadmap_agent.py  test_session_store.py  (+8 more)
(+147 files in other folders)
