[project]
name = "monglepick-agent"
version = "0.1.0"
description = "몽글픽 AI 영화 추천 에이전트"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # ── LLM / Agent ──
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "openai>=1.50.0",
    "anthropic>=0.37.0",
    # ── Vector DB (Qdrant) ──
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    # ── Graph DB (Neo4j) ──
    "neo4j>=5.25.0",
    "langchain-neo4j>=0.1.0",
    # ── Search (Elasticsearch) ──
    "elasticsearch>=8.15.0,<9.0.0",  # ES 서버 8.17.0과 호환
    # ── Cache (Redis) ──
    "redis>=5.2.0",
    # ── RDB (MySQL) ──
    "aiomysql>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "cryptography>=43.0.0",
    # ── Embedding (Upstage Solar — OpenAI 호환 API 사용) ──
    # ── Ollama (로컬 LLM) ──
    "langchain-ollama>=0.3.0",
    # ── Image Processing ──
    "Pillow>=10.0.0",
    # ── Data Pipeline ──
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    # ── Observability (LangSmith 트레이싱) ──
    "langsmith>=0.7.6",
    # ── Utilities ──
    "PyJWT>=2.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monglepick"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

# [tool.uv]
# environments 제거 — CI/CD Ubuntu 러너에서 uv sync 실패 방지

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
